CSS: Fix footer z-index. Less Codesystem fields.

--- a/angular-ui/src/app/components/snomed-footer/snomed-footer.component.scss
+++ b/angular-ui/src/app/components/snomed-footer/snomed-footer.component.scss
@@ -2,6 +2,7 @@
 
 footer.footer {
     position: fixed;
+    z-index: 900;
     bottom: 0;
     width: 100%;
     height: 4rem; /* Set the fixed height of the footer here */
